Legacy Gen1-2 card update 1