@@ -91,9 +91,9 @@
 			debuglevel="lines,vars,source"
 			srcdir="${dir.buildfile}/src/gov/gsa/icamcardbuilder/app/" 
 			destdir="${dir.buildfile}/bin"
-			target="1.8">
-			<classpath refid="classpath"/>
-			<compilerarg value="-Xlint" />
+			target="10">
+			<classpath refid="classpath" />
+			<compilerarg line="-Xlint --add-modules java.xml.bind" />
 		</javac>
 	</target>
 	<target name="distclean">
